/*
Â© 2025 Sharon Aicler (saichler@gmail.com)

Layer 8 Ecosystem is licensed under the Apache License, Version 2.0.
You may obtain a copy of the License at:

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package prj;

option go_package = "./types/prj";

import "erp-common.proto";

// ============================================================================
// PROJECT-SPECIFIC COMMON TYPES AND ENUMS
// ============================================================================

// --- Project Enums ---

enum PrjProjectStatus {
  PRJ_PROJECT_STATUS_UNSPECIFIED = 0;
  PRJ_PROJECT_STATUS_DRAFT = 1;
  PRJ_PROJECT_STATUS_PLANNED = 2;
  PRJ_PROJECT_STATUS_IN_PROGRESS = 3;
  PRJ_PROJECT_STATUS_ON_HOLD = 4;
  PRJ_PROJECT_STATUS_COMPLETED = 5;
  PRJ_PROJECT_STATUS_CANCELLED = 6;
}

enum PrjProjectType {
  PRJ_PROJECT_TYPE_UNSPECIFIED = 0;
  PRJ_PROJECT_TYPE_INTERNAL = 1;
  PRJ_PROJECT_TYPE_CLIENT = 2;
  PRJ_PROJECT_TYPE_FIXED_PRICE = 3;
  PRJ_PROJECT_TYPE_TIME_AND_MATERIALS = 4;
  PRJ_PROJECT_TYPE_RETAINER = 5;
  PRJ_PROJECT_TYPE_CAPITAL = 6;
}

enum PrjProjectPriority {
  PRJ_PROJECT_PRIORITY_UNSPECIFIED = 0;
  PRJ_PROJECT_PRIORITY_LOW = 1;
  PRJ_PROJECT_PRIORITY_MEDIUM = 2;
  PRJ_PROJECT_PRIORITY_HIGH = 3;
  PRJ_PROJECT_PRIORITY_CRITICAL = 4;
}

// --- Task Enums ---

enum PrjTaskStatus {
  PRJ_TASK_STATUS_UNSPECIFIED = 0;
  PRJ_TASK_STATUS_NOT_STARTED = 1;
  PRJ_TASK_STATUS_IN_PROGRESS = 2;
  PRJ_TASK_STATUS_ON_HOLD = 3;
  PRJ_TASK_STATUS_COMPLETED = 4;
  PRJ_TASK_STATUS_CANCELLED = 5;
}

enum PrjTaskPriority {
  PRJ_TASK_PRIORITY_UNSPECIFIED = 0;
  PRJ_TASK_PRIORITY_LOW = 1;
  PRJ_TASK_PRIORITY_MEDIUM = 2;
  PRJ_TASK_PRIORITY_HIGH = 3;
  PRJ_TASK_PRIORITY_CRITICAL = 4;
}

// --- Milestone Enums ---

enum PrjMilestoneStatus {
  PRJ_MILESTONE_STATUS_UNSPECIFIED = 0;
  PRJ_MILESTONE_STATUS_PENDING = 1;
  PRJ_MILESTONE_STATUS_ACHIEVED = 2;
  PRJ_MILESTONE_STATUS_MISSED = 3;
  PRJ_MILESTONE_STATUS_AT_RISK = 4;
}

// --- Risk Enums ---

enum PrjRiskSeverity {
  PRJ_RISK_SEVERITY_UNSPECIFIED = 0;
  PRJ_RISK_SEVERITY_LOW = 1;
  PRJ_RISK_SEVERITY_MEDIUM = 2;
  PRJ_RISK_SEVERITY_HIGH = 3;
  PRJ_RISK_SEVERITY_CRITICAL = 4;
}

enum PrjRiskStatus {
  PRJ_RISK_STATUS_UNSPECIFIED = 0;
  PRJ_RISK_STATUS_IDENTIFIED = 1;
  PRJ_RISK_STATUS_ASSESSED = 2;
  PRJ_RISK_STATUS_MITIGATED = 3;
  PRJ_RISK_STATUS_OCCURRED = 4;
  PRJ_RISK_STATUS_CLOSED = 5;
}

// --- Dependency Enums ---

enum PrjDependencyType {
  PRJ_DEPENDENCY_TYPE_UNSPECIFIED = 0;
  PRJ_DEPENDENCY_TYPE_FINISH_TO_START = 1;
  PRJ_DEPENDENCY_TYPE_START_TO_START = 2;
  PRJ_DEPENDENCY_TYPE_FINISH_TO_FINISH = 3;
  PRJ_DEPENDENCY_TYPE_START_TO_FINISH = 4;
}

// --- Resource Enums ---

enum PrjResourceType {
  PRJ_RESOURCE_TYPE_UNSPECIFIED = 0;
  PRJ_RESOURCE_TYPE_EMPLOYEE = 1;
  PRJ_RESOURCE_TYPE_CONTRACTOR = 2;
  PRJ_RESOURCE_TYPE_EQUIPMENT = 3;
  PRJ_RESOURCE_TYPE_MATERIAL = 4;
}

enum PrjAllocationStatus {
  PRJ_ALLOCATION_STATUS_UNSPECIFIED = 0;
  PRJ_ALLOCATION_STATUS_TENTATIVE = 1;
  PRJ_ALLOCATION_STATUS_CONFIRMED = 2;
  PRJ_ALLOCATION_STATUS_CANCELLED = 3;
}

enum PrjBookingStatus {
  PRJ_BOOKING_STATUS_UNSPECIFIED = 0;
  PRJ_BOOKING_STATUS_REQUESTED = 1;
  PRJ_BOOKING_STATUS_APPROVED = 2;
  PRJ_BOOKING_STATUS_REJECTED = 3;
  PRJ_BOOKING_STATUS_CANCELLED = 4;
}

// --- Timesheet Enums ---

enum PrjTimesheetStatus {
  PRJ_TIMESHEET_STATUS_UNSPECIFIED = 0;
  PRJ_TIMESHEET_STATUS_DRAFT = 1;
  PRJ_TIMESHEET_STATUS_SUBMITTED = 2;
  PRJ_TIMESHEET_STATUS_APPROVED = 3;
  PRJ_TIMESHEET_STATUS_REJECTED = 4;
}

// --- Expense Enums ---

enum PrjExpenseStatus {
  PRJ_EXPENSE_STATUS_UNSPECIFIED = 0;
  PRJ_EXPENSE_STATUS_DRAFT = 1;
  PRJ_EXPENSE_STATUS_SUBMITTED = 2;
  PRJ_EXPENSE_STATUS_APPROVED = 3;
  PRJ_EXPENSE_STATUS_REJECTED = 4;
  PRJ_EXPENSE_STATUS_PAID = 5;
}

enum PrjExpenseType {
  PRJ_EXPENSE_TYPE_UNSPECIFIED = 0;
  PRJ_EXPENSE_TYPE_TRAVEL = 1;
  PRJ_EXPENSE_TYPE_LODGING = 2;
  PRJ_EXPENSE_TYPE_MEALS = 3;
  PRJ_EXPENSE_TYPE_TRANSPORTATION = 4;
  PRJ_EXPENSE_TYPE_MATERIALS = 5;
  PRJ_EXPENSE_TYPE_EQUIPMENT = 6;
  PRJ_EXPENSE_TYPE_SOFTWARE = 7;
  PRJ_EXPENSE_TYPE_OTHER = 8;
}

// --- Billing Enums ---

enum PrjBillingType {
  PRJ_BILLING_TYPE_UNSPECIFIED = 0;
  PRJ_BILLING_TYPE_TIME_AND_MATERIALS = 1;
  PRJ_BILLING_TYPE_FIXED_PRICE = 2;
  PRJ_BILLING_TYPE_MILESTONE = 3;
  PRJ_BILLING_TYPE_RETAINER = 4;
  PRJ_BILLING_TYPE_NOT_BILLABLE = 5;
}

enum PrjInvoiceStatus {
  PRJ_INVOICE_STATUS_UNSPECIFIED = 0;
  PRJ_INVOICE_STATUS_DRAFT = 1;
  PRJ_INVOICE_STATUS_PENDING = 2;
  PRJ_INVOICE_STATUS_SENT = 3;
  PRJ_INVOICE_STATUS_PAID = 4;
  PRJ_INVOICE_STATUS_OVERDUE = 5;
  PRJ_INVOICE_STATUS_CANCELLED = 6;
}

enum PrjRevenueRecognitionMethod {
  PRJ_REVENUE_RECOGNITION_METHOD_UNSPECIFIED = 0;
  PRJ_REVENUE_RECOGNITION_METHOD_COMPLETED_CONTRACT = 1;
  PRJ_REVENUE_RECOGNITION_METHOD_PERCENTAGE_OF_COMPLETION = 2;
  PRJ_REVENUE_RECOGNITION_METHOD_AS_INVOICED = 3;
}

// --- Analytics Enums ---

enum PrjIssueStatus {
  PRJ_ISSUE_STATUS_UNSPECIFIED = 0;
  PRJ_ISSUE_STATUS_OPEN = 1;
  PRJ_ISSUE_STATUS_IN_PROGRESS = 2;
  PRJ_ISSUE_STATUS_RESOLVED = 3;
  PRJ_ISSUE_STATUS_CLOSED = 4;
}

enum PrjIssuePriority {
  PRJ_ISSUE_PRIORITY_UNSPECIFIED = 0;
  PRJ_ISSUE_PRIORITY_LOW = 1;
  PRJ_ISSUE_PRIORITY_MEDIUM = 2;
  PRJ_ISSUE_PRIORITY_HIGH = 3;
  PRJ_ISSUE_PRIORITY_CRITICAL = 4;
}

enum PrjHealthIndicator {
  PRJ_HEALTH_INDICATOR_UNSPECIFIED = 0;
  PRJ_HEALTH_INDICATOR_GREEN = 1;
  PRJ_HEALTH_INDICATOR_YELLOW = 2;
  PRJ_HEALTH_INDICATOR_RED = 3;
}

// --- Approval Enums ---

enum PrjApprovalType {
  PRJ_APPROVAL_TYPE_UNSPECIFIED = 0;
  PRJ_APPROVAL_TYPE_TIMESHEET = 1;
  PRJ_APPROVAL_TYPE_EXPENSE = 2;
  PRJ_APPROVAL_TYPE_INVOICE = 3;
  PRJ_APPROVAL_TYPE_BUDGET = 4;
}
